# filego.rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
__test__/: .gitignore  Cargo.toml
__test__/src/: async_std.rs  lib.rs  tokio.rs
package/: CHANGELOG.md  Cargo.toml  README.md
package/src/: check.rs  lib.rs  merge.rs  split.rs
package/src/async_std/: check.rs  merge.rs  mod.rs  split.rs
package/src/config/: mod.rs
package/src/function/: check.rs  merge.rs  split.rs
package/src/functions/: check.rs  merge.rs  split.rs
package/src/tokio/: check.rs  merge.rs  split.rs
