[package]
name = "filego"
version = "0.4.0"
authors = ["Alpheus Tang"]
edition = "2021"
description = """
A file splitting & merging solution
"""
readme = "README.md"
homepage = "https://github.com/alpheustangs/filego.rs"
repository = "https://github.com/alpheustangs/filego.rs"
license = "MIT"
keywords = [
    "split",
    "check",
    "merge",
    "util",
    "fs",
]
categories = [
    "filesystem",
    "multimedia",
]
include = [
    "src/*", 
    "Cargo.toml", 
    "README.md",
]

[lib]
name = "filego"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1.42.0", features = ["fs", "io-util"] }
