[package]
name = "filego"
version = "0.5.0"
authors = ["Alpheus Tang"]
edition = "2024"
description = """
A file splitting & merging solution
"""
readme = "README.md"
homepage = "https://github.com/alpheustangs/filego.rs"
repository = "https://github.com/alpheustangs/filego.rs"
license = "MIT"
keywords = [
    "split",
    "check",
    "merge",
    "util",
    "fs",
]
categories = [
    "filesystem",
    "multimedia",
]
include = [
    "src/*", 
    "Cargo.toml", 
    "README.md",
]

[lib]
name = "filego"
path = "src/lib.rs"

[features]
default = []
async-std = ["dep:async-std"]
async_std = ["async-std"]
tokio = ["dep:tokio"]
all = ["async-std", "tokio"]

[dependencies.async-std]
version = "^1.13.0"
optional = true

[dependencies.tokio]
version = "^1.43.0"
optional = true
features = ["fs", "io-util"]
