[package]
name = "filego"
version = "0.5.1"
authors = ["Alpheus Tang"]
edition = "2024"
rust-version = "1.85.0"
description = """
A file splitting & merging solution
"""
readme = "README.md"
homepage = "https://github.com/alpheustangs/filego.rs"
repository = "https://github.com/alpheustangs/filego.rs"
license = "MIT"
keywords = [
    "split",
    "check",
    "merge",
    "util",
    "fs",
]
categories = [
    "filesystem",
    "multimedia",
]
include = [
    "src/*", 
    "Cargo.toml", 
    "README.md",
]

[package.metadata.docs.rs]
features = ["all"]

[lib]
name = "filego"
path = "src/lib.rs"

[dependencies.async-std]
workspace = true
optional = true

[dependencies.tokio]
version = "^1.43.0"
optional = true
features = ["fs", "io-util"]

[features]
default = []
async-std = ["dep:async-std"]
async_std = ["async-std"]
tokio = ["dep:tokio"]
all = ["async-std", "tokio"]
